@@ -239,7 +239,9 @@ function initModules(pCallBack){
      });
     
     CloudCmd.getModules(function(pModules){
-        var lStorage            = 'storage/',
+        pModules                = pModules || [];
+        
+        var lStorage            = 'storage',
             lShowLoadFunc       = Util.retFunc( DOM.Images.showLoad ),
             lDisableMenuFunc    = function(){
                 var lFunc = document.oncontextmenu;
@@ -255,24 +257,36 @@ function initModules(pCallBack){
                 'viewer'                : lShowLoadFunc
             },
             
-            lNames               = {};
-            lNames[lStorage + '_dropbox']   = 'DropBox',
-            lNames[lStorage + '_github' ]   = 'GitHub',
-            lNames[lStorage + '_gdrive' ]   = 'GDrive',
-            lNames[lStorage + '_vk' ]       = 'VK',
+            lLoad = function(pName, pPath, pDoBefore){
+                loadModule({
+                    path        : pPath,
+                    name        : pName,
+                    dobefore    : pDoBefore
+                });
+            };
         
         lDisableMenuFunc();
         
-        if( Util.isArray(pModules) )
-            for(var i = 0, n = pModules.length; i < n ; i++){
-                var lModule = pModules[i];
-                
-                loadModule({
-                    path        : lModule,
-                    dobefore    : lDoBefore[lModule],
-                    name        : lNames[lModule]
-                });
+        
+        
+        for(var i = 0, n = pModules.length; i < n ; i++){
+            var lModule = pModules[i];
+            
+            if(Util.isObject(lModule)){
+                for(var lProp in lModule)
+                    if(lProp === lStorage){
+                        var m       = lModule[lProp].length,
+                            lMod    = lModule[lProp];
+                        
+                        for(var j = 0; j < m; j++)
+                            lLoad(lMod[j].name, lStorage + '/' + lMod[j].path);
+                        
+                        break;
+                    }
             }
+            else
+                lLoad(null, lModule, lDoBefore[lModule]);
+        }
         
         Util.exec(pCallBack);
     });
